View: Primeiras anotações

--- a/MVCArchitecture/Views/_ViewImports.cshtml
+++ b/MVCArchitecture/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using MVCArchitecture
 @using MVCArchitecture.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@*Import da própria solução para identificar as View Components personalizadas*@
+@addTagHelper "*, MVCArchitecture"
