--- a/MVCArchitecture/Views/Home/Index.cshtml
+++ b/MVCArchitecture/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
+@* Uso de uma partial View *@
+
+<partial name="_AvisoGeral"/>
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
